--- a/styles.scss
+++ b/styles.scss
@@ -36,7 +36,7 @@ h1 {
 .navbar {
   font-size: $font-size-sm;
   font-weight: 600;
-  text-transform: lowercase;
+  text-transform: uppercase;
 
   &-nav {
     .nav-link {
