minor updates to reserach articles

--- a/styles.scss
+++ b/styles.scss
@@ -4,7 +4,6 @@
 $light-green: #009c4e;
 $cream: #FDFBF7;
 $gray: #64605f;
-$gray2: #f5f3f1;
 $purple: #9158A2;
 $darkblue: #053660;
 $blue: #374699;
@@ -17,7 +16,7 @@ $navbar-fg: $cream; // navbar foreground elements
 // $navbar-hl: $light-green; // highlight color when hovering over navbar links
 $body-bg: $cream; // page background 
 $body-color: $gray; // page text 
-$footer-bg: $gray; // footer 
+$footer-bg: $teal; // footer 
 $link-color: $purple; // hyperlinks 
 
 // Inline code
